server-setup/3.security_group.tf
resource "aws_security_group" "ssh" {
  name        = "ssh"
  description = "Allow SSH"
  vpc_id      = aws_vpc.dev_vpc.id
  ingress {
    description = "Allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow everything outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web-traffic" {
  name        = "web-traffic"
  description = "Allow HTTP"
  vpc_id      = aws_vpc.dev_vpc.id
  ingress {
    description = "Allow port 22"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow everything outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
